fixed dynamic vertical align problem for circle numbers in custom.css

--- a/landing/custom.css
+++ b/landing/custom.css
@@ -33,31 +33,36 @@ body {
 }
 
 .instruction {
+	position: relative;
     display: block;
+    height: inherit;
     border: 1px solid blue;
-    height: 50px;
     margin: 15px 0px;
-    // vertical-align: middle;
+    vertical-align: middle;
 }
 
 .circle {
+
+	border: 1px solid blue;
     background-color: green;
     width: 50px;
+    line-height: 50px;
     display: inline-block;
     color: white;
-    position: relative;
+    text-align: center;
     vertical-align: middle;
-    height: 50px;
-    border-radius: 50%;
+    // border-radius: 50%;
     // float: left;
 }
 
 .number {
+	border: 1px solid blue;
+	display: inline-block;
+	height: 100%;
     text-align: center;
-    vertical-align: baseline;
-    position: inherit;
-    padding: 15px 0px 15px 0px;
-    // FIXME: DON'T USE PX HERE
+    margin: 0 auto;
+    // padding: 15px 0px 15px 0px;
+    // FIXME: DONT USE PX HERE
 }
 
 .instruction-text {
